fixed work spacing

--- a/assets/css/sass/layout/_work.scss
+++ b/assets/css/sass/layout/_work.scss
@@ -3,6 +3,7 @@
     flex-flow: row wrap;
     height: 100vh;
     margin-bottom: 300px;
+    justify-content: center;
 }
 @media only screen and (max-width: 620px){
     #work{
